--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       content="width=320, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <title>JS Excel</title>
   </head>
   <body>
